@@ -1,4 +1,4 @@
 DIST resourceproto-1.0.2.tar.bz2 36859 RMD160 8b665848d4ec2ccacb243bc058268a41b96124c9 SHA1 ac22c2e439067185ea169d20677f74321da7b34b SHA256 0c33d6fceef5483001459bdc934b5831502250b27f1f4ad370ab044f8ab53487
-EBUILD resourceproto-1.0.2.ebuild 514 RMD160 b64caf662b959cedf68b6878b92bfb57d7002c2c SHA1 ea0d22c7a41187e66c1f82c068d091a5755e9aa7 SHA256 e212345704f91e744fbc7a18481d74fda79576560984513772148485c98ac87a
-MISC ChangeLog 3029 RMD160 da8fcb54d16c7a0d26e09a009df8b87526459b4d SHA1 6c65fea2b13fb46183ff90890aae17265a415980 SHA256 114536706423297db0727b312e12254942c38db7b644c4703ff31ccda59731db
+EBUILD resourceproto-1.0.2.ebuild 514 RMD160 63a75933a5ef55aebfe5fa233161babe32f38da8 SHA1 70b444841c9e26f048c18660765c4458009b329e SHA256 6c299c132c0ed2454f8b4277a9ad33bab982f2ed6388e5e72943dc1650a27bfb
+MISC ChangeLog 3130 RMD160 67e5c4c85e92af9aea653d14851e57495911da57 SHA1 882dd4a8233b2393a62cca91088fcd56bf3a53a6 SHA256 a09ce4796f80cd10cb3bc75482c597b6317ba10845277d4d72457c65fe69236d
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
